added side bar, home, about me

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,15 @@
-Test
+<div class="digital_portfolio">
+  <div class="side_bar">
+    <app-header></app-header>
+  </div>
+  <div class="main_container">
+    <app-home></app-home>
+    <app-about></app-about>
+    <app-services></app-services>
+    <app-portfolio></app-portfolio>
+    <app-feedback></app-feedback>
+    <app-skills></app-skills>
+    <app-our-blog></app-our-blog>
+    <app-contact></app-contact>
+  </div>
+</div>
