updated all code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,18 @@
     <app-header></app-header>
   </div>
   <div class="main_container">
-    <app-home></app-home>
-    <app-about></app-about>
-    <app-services></app-services>
-    <app-portfolio></app-portfolio>
-    <app-feedback></app-feedback>
-    <app-skills></app-skills>
-    <app-our-blog></app-our-blog>
-    <app-contact></app-contact>
+    
+      <app-home       id="home"      appScrollSpy="Home"      spyId="home"></app-home>
+      <!-- <app-about      id="about"     appScrollSpy="About Me"  spyId="about"></app-about> -->
+      <!-- <app-services   id="services"  appScrollSpy="Service"   spyId="services"></app-services> -->
+      <app-resume     id="resume"    appScrollSpy="Resume"    spyId="resume"></app-resume>
+      <app-skills     id="skill"     appScrollSpy="Skill"     spyId="skill"></app-skills>
+      <app-portfolio  id="portfolio" appScrollSpy="Portfolio" spyId="portfolio"></app-portfolio>
+      <app-our-blog   id="ourblog"   appScrollSpy="Our Blog"  spyId="ourblog"></app-our-blog>
+      <app-contact    id="contact"   appScrollSpy="Contact"   spyId="contact"></app-contact>
+
+    
+    
   </div>
+
 </div>
