--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,68 +1,35 @@
-<!-- <div class="hero">
-    <div class="hero-content">
-      <div class="avatar-section">
-        <img src="avatar.png" alt="Ibrahim Memon" class="avatar" />
-        <p class="intro-text">Hello! I Am <span class="name">Ajay Pal Singh</span></p>
-      </div>
-      <div class="headline">
-        <p class="subheading">A Designer who</p>
-        <h1>Judges a book<br />by its <span class="highlight">cover</span>...</h1>
-        <p class="note">Because if the cover does not impress you what else can?</p>
-      </div>
-  
-      <div class="job-title">
-        <h2>I'm a Software Engineer.<span class="cursor">|</span></h2>
-        <p>
-          Currently, I'm a Software Engineer at 
-          <a href="https://facebook.com" target="_blank">
-            <i class="fab fa-facebook"></i> Facebook
-          </a>
-        </p>
-      </div>
-  
-      <div class="description">
-        <p>
-          A self-taught UI/UX designer, functioning in the industry for 3+ years now.<br />
-          I make meaningful and delightful digital products that create an equilibrium<br />
-          between user needs and business goals.
-        </p>
-      </div>
-    </div>
-  </div> -->
-
-
-
-
-<div class="main-content">
+<div class="page_container main-content" >
     <div class="home-content">
-      <p>WELCOME TO MY WORLD</p>
-      <div class="heading-content">
-        <h1>Hi, I'm <span class="text_gradeint">Mohit Pal</span> <br> <span class="type_text">a <label  [ngClass]="className">   {{bannerTxt}}. </label></span>
-          </h1>
-        <p class="para-content"> I use animation as a third dimension by which to simplify experiences and kuiding thro
-          each and every interaction. I’m not adding motion just to spruce things up, but doing it in ways that. </p>
-      </div>
-      <div class="skills-icons">
-        <div class="skill-content">
-          <h3>FIND WITH ME</h3>
-          <img src="../../../assets/imagess/facebook-xxl.png" alt="">
-          <img src="../../../assets/imagess/instagram-4-xl.png" alt="">
-          <img src="../../../assets/imagess/linkedin-xxl.png" alt="">
+        <p>WELCOME TO MY WORLD</p>
+        <div class="heading-content">
+            <h1>Hi, I'm <span class="text_gradeint">Mohit Pal</span> <br> <span class="type_text">a <label
+                        [ngClass]="className"> {{bannerTxt}}. </label></span>
+            </h1>
+            <p class="para-content">
+                I began my journey as a web developer with a strong curiosity for how websites work under the hood. Over
+                the past <strong>7 years</strong>, I’ve dedicated most of my time to designing, developing, and
+                optimizing software and web applications that are fast, scalable, and user-friendly.
+            </p>
         </div>
-        <div class="skillon-content">
-          <h3>BEST SKILL ON</h3>
-          <img src="../../../assets/imagess/icons-01.png" alt="">
-          <img src="../../../assets/imagess/icons-02.png" alt="">
-          <img src="../../../assets/imagess/icons-03.png" alt="">
+        <div class="skills-icons">
+            <div class="skill-content">
+                <button class="cta-button"><i class="fa fa-download"></i> Download CV</button>
+                <div class="btn-area">
+                    <a href="#" class="play-btn1 popup-youtube">
+                        <i class="fa fa-play"></i>
+                        <span>Play Video</span>
+                    </a>
+                </div>
+            </div>
+            <div class="skillon-content">
+            </div>
         </div>
-      </div>
     </div>
     <div class="homeimg-content">
-      <div class="text">
-        <img src="../../../assets/imagess/mohit.png" alt="">
-      </div>
+        <div class="text">
+            <img src="../../../assets/imagess/mohit.png" alt="">
+        </div>
     </div>
-  </div>
-  
-  <button id="start" (click)="startInterval()">start</button>
-  
+</div>
+
+<button id="start" (click)="startInterval()">start</button>
