--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -1,1 +1,109 @@
-<p>portfolio works!</p>
+<div class="page_container">
+    <section class="portfolio-section page_content" >
+           <h2>My Portfolio</h2>
+    <div class="portfolio-row">
+        <div class="portfolio-card">
+            <div class="portfolio-card__image"></div>
+            <div class="portfolio-card__content">
+                
+                <div class="portfolio-card__title">Pronnel</div>
+                <div class="portfolio-card__desc">
+                    Quisquam, quidem. Doloremque, voluptatum. Voluptas, repellendus. Quibusdam, animi. Lorem ipsum dolor sit amet. 
+                </div>
+                <button class="portfolio-card__btn">READ MORE</button>
+                
+            </div>
+        </div>
+        
+        
+        <div class="portfolio-card">
+            <div class="portfolio-card__image"></div>
+            <div class="portfolio-card__content">
+                
+                <div class="portfolio-card__title">Genre Robotics</div>
+                <div class="portfolio-card__desc">
+                    Quisquam, quidem. Doloremque, voluptatum. Voluptas, repellendus. Quibusdam, animi. Lorem ipsum dolor sit amet.
+                </div>
+                <button class="portfolio-card__btn">READ MORE</button>
+                
+            </div>
+        </div>
+        <div class="portfolio-card">
+            <div class="portfolio-card__image"></div>
+            <div class="portfolio-card__content">
+                
+                <div class="portfolio-card__title">Happy Locate</div>
+                <div class="portfolio-card__desc">
+                    Quisquam, quidem. Doloremque, voluptatum. Voluptas, repellendus. Quibusdam, animi. Lorem ipsum dolor sit amet.
+                </div>
+                <button class="portfolio-card__btn">READ MORE</button>
+                
+            </div>
+        </div>
+        <div class="portfolio-card">
+            <div class="portfolio-card__image"></div>
+            <div class="portfolio-card__content">
+                
+                <div class="portfolio-card__title">Faradtech</div>
+                <div class="portfolio-card__desc">
+                    Quisquam, quidem. Doloremque, voluptatum. Voluptas, repellendus. Quibusdam, animi. Lorem ipsum dolor sit amet.  asdfasdfasdf
+                </div>
+                <button class="portfolio-card__btn">READ MORE</button>
+                
+            </div>
+        </div>
+        <div class="portfolio-card">
+            <div class="portfolio-card__image"></div>
+            <div class="portfolio-card__content">
+                
+                <div class="portfolio-card__title">Shwet Kapila</div>
+                <div class="portfolio-card__desc">
+                    Quisquam, quidem. Doloremque, voluptatum. Voluptas, repellendus. Quibusdam, animi. Lorem ipsum dolor sit amet. asdf asdf
+                </div>
+                <button class="portfolio-card__btn">READ MORE</button>
+                
+            </div>
+        </div>
+        <div class="portfolio-card">
+            <div class="portfolio-card__image"></div>
+            <div class="portfolio-card__content">
+                
+                <div class="portfolio-card__title">Super Construct</div>
+                <div class="portfolio-card__desc">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?
+                </div>
+                <button class="portfolio-card__btn">READ MORE</button>
+                
+            </div>
+        </div>
+        <div class="portfolio-card">
+            <div class="portfolio-card__image"></div>
+            <div class="portfolio-card__content">
+                
+                <div class="portfolio-card__title">Universal Tech solution</div>
+                <div class="portfolio-card__desc">
+                    Quisquam, quidem. Doloremque, voluptatum. Voluptas, repellendus. 
+                </div>
+                <button class="portfolio-card__btn">READ MORE</button>
+                
+            </div>
+        </div>
+         <div class="portfolio-card">
+            <div class="portfolio-card__image"></div>
+            <div class="portfolio-card__content">
+                
+                <div class="portfolio-card__title">Fandom Live</div>
+                <div class="portfolio-card__desc">
+                    Quisquam, quidem. Doloremque, voluptatum. Voluptas, repellendus. Quibusdam, animi. Lorem ipsum dolor sit amet.
+                </div>
+                <button class="portfolio-card__btn">READ MORE</button>
+                
+            </div>
+        </div>
+        
+    </div>
+    
+    </section>
+
+</div>
+
