--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,1 +1,81 @@
-<p>skills works!</p>
+<div class="page_container">
+    <section class="skills-section page_content" >
+    
+        <h2>My Skills</h2>
+        <h3>Coding Skills.</h3>
+        <div class="grid-container">
+            <div class="hex">
+                <div class="hex_content">
+                    <img src="../../../assets/imagess/angular_icon_gradient.gif" alt="HTML5">
+                    <h2>Angular</h2>
+                    <p>98%</p>
+                </div>
+    
+            </div>
+            <div class="hex">
+                <div class="hex_content">
+                    <img src="../../../assets/imagess/reacticon.png" alt="HTML5">
+                    <h2>React</h2>
+                    <p>95%</p>
+                </div>
+            </div>
+            <div class="hex">
+                <div class="hex_content">
+                    <img src="../../../assets/imagess/nodeicon.png" alt="HTML5">
+                    <h2>Node</h2>
+                    <p>99%</p>
+                </div>
+            </div>
+            <div class="hex">
+                <div class="hex_content">
+                     <img src="../../../assets/imagess/mongoicon.png" alt="HTML5">
+                    <h2>MongoDB</h2>
+                    <p>99%</p>
+                </div>
+    
+            </div>
+            <div class="hex">
+                <div class="hex_content">
+                    <img src="../../../assets/imagess/pythonicon.png" alt="HTML5">
+                    <h2>Python</h2>
+                    <p>97%</p>
+                </div>
+            </div>
+            <div class="hex">
+                <div class="hex_content">
+                     <img src="../../../assets/imagess/vueicon.png" alt="HTML5">
+                    <h2>VUE</h2>
+                    <p>98%</p>
+                </div>
+            </div>
+            <div class="hex">
+                <div class="hex_content">
+                     <img src="../../../assets/imagess/noderedicon.png" alt="HTML5">
+                    <h2>NODERED</h2>
+                    <p>97%</p>
+                </div>
+            </div>
+            <div class="hex">
+                <div class="hex_content">
+                     <img src="../../../assets/imagess/phpicon.png" alt="HTML5">
+                    <h2>PHP</h2>
+                    <p>98%</p>
+                </div>
+            </div>
+        </div>
+    
+    
+        <div class="design-skills">
+            <h3>Design Skills.</h3>
+            <div class="design-skill-tags">
+              <div class="tag figma"><span>94%</span> HTML, CSS</div>
+              <div class="tag photoshop"><span>98%</span> PHOTOSHOP</div>
+              <div class="tag xd"><span>88%</span> ADOBE XD</div>
+              <div class="tag sketch"><span>85%</span> SKETCH</div>
+              <div class="tag invision"><span>89%</span> INVISION</div>
+            </div>
+          </div>
+          
+    </section>
+
+</div>
