--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,10 +13,10 @@
       overflow-y: auto;
       z-index: 1000;
   
-      @media (max-width: 992px) {
+      @media (max-width: 1410px) {
         width: 100%;
         height: auto;
-        position: relative;
+        // position: relative;
         border-right: none;
         border-bottom: 1px solid #eaeaea;
       }
@@ -30,7 +30,7 @@
       flex-direction: column;
       gap: 3rem;
   
-      @media (max-width: 992px) {
+      @media (max-width: 1410px) {
         margin-left: 0;
         padding: 1rem;
       }
