--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -3,10 +3,9 @@
   .about-section {
     display: grid;
     flex-wrap: wrap;
-    padding: 40px;
-    background: #f9f9f912;
+    
     position: relative;
-    grid-template-columns: 450px 1fr;
+    grid-template-columns: 375px 1fr;
     color: white;
   
     .stats {
@@ -107,10 +106,13 @@
       }
   
       .description {
-       
-        font-size: 14px;
-        max-width: 600px;
+        color: #b6aeae;
+        font-size: 20px;
+        // max-width: 600px;
         margin: 20px 0;
+        strong{
+            color: white;
+        }
       }
   
       .services {
@@ -129,60 +131,46 @@
         }
       }
   
-      .cta-button {
-        margin-top: 30px;
-        padding: 12px 24px;
-        background: linear-gradient(to right, var(--primary-color2), var(--secondary-color2));
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        font-weight: bold;
-        transition: 0.3s ease;
-  
-        &:hover {
-          transform: scale(1.05);
-        }
-      }
+      
     }
   }
   
-  // 📱 Responsive
-  @media (max-width: 768px) {
-    .about-section {
-      flex-direction: column;
-      padding: 20px;
+  // // 📱 Responsive
+  // @media (max-width: 768px) {
+  //   .about-section {
+  //     flex-direction: column;
+  //     padding: 20px;
   
-      .about-content {
-        padding-left: 0;
-        margin-top: 30px;
+  //     .about-content {
+  //       padding-left: 0;
+  //       margin-top: 30px;
   
-        .title {
-          font-size: 26px;
-        }
+  //       .title {
+  //         font-size: 26px;
+  //       }
   
-        .sub-title {
-          font-size: 22px;
-        }
+  //       .sub-title {
+  //         font-size: 22px;
+  //       }
   
-        .services {
-          flex-direction: column;
-          gap: 20px;
-        }
-      }
-    }
+  //       .services {
+  //         flex-direction: column;
+  //         gap: 20px;
+  //       }
+  //     }
+  //   }
   
-    .stats {
-      flex-direction: row !important;
-      justify-content: center;
-      flex-wrap: wrap;
+  //   .stats {
+  //     flex-direction: row !important;
+  //     justify-content: center;
+  //     flex-wrap: wrap;
   
-      .hexagon {
-        width: 100px;
-        height: 115px;
-      }
-    }
-  }
+  //     .hexagon {
+  //       width: 100px;
+  //       height: 115px;
+  //     }
+  //   }
+  // }
   
 
 
@@ -252,5 +240,70 @@
       right: 0;
     }
   }
+
+  .details-list{
+    list-style: none;
+    font-size: 20px;
+    li{
+        padding: 10px;
+        display: grid;
+        grid-template-columns: 100px 1fr;
+        color: #b6aeae;
+        .detail-value{
+            font-weight: bold;
+            color: white;
+        }
+
+    }
+  }
+
+
+   
+    @media (max-width: 575.98px) {
+    
+    }
+
+    
+    @media (min-width: 576px) and (max-width: 767.98px) {
+     .about-section {
+      grid-template-columns: 1fr;
+      .stats {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        margin-bottom: 20px;
+        .hexagon {
+          width: 125px;
+          height: 125px;
+          padding: 10px;
+          h2 {
+            font-size: 24px;
+          }
+          p {
+            font-size: 14px;
+          }
+        }
+         .hexagon:nth-child(2) , .hexagon:nth-child(3) {
+          position: unset;
+          top: 0;
+          left: 0;
+         }
+        
+      }
+      .about-content {
+        padding-left: 0;
+      }
+     }
+    }
+
+    
+    @media (min-width: 768px) and (max-width: 991.98px) {
+    
+    }
+
+    
+    @media (min-width: 992px) and (max-width: 1199.98px) {
+    
+    }
   
   
