--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,1 +1,59 @@
-<p>contact works!</p>
+<div class="page_container">
+    <div  class="page_content contact_page">
+        <h2>Contact Us</h2>
+        <div class="container-xl p-3 p-lg-5">
+            <div class="text-center mb-5">
+                
+            </div>
+            <div class="row gx-3 gx-lg-5 detail_contact">
+                <div class="col-lg-6">
+                    <h1 class="mb-3 text-center">Get in Touch</h1>
+                <p class="fs-16px text-body text-opacity-50 text-center mb-0"> Contact us today to explore how our team can
+                    assist you. <br> Whether you have inquiries, need support, or want to discuss a partnership, <br> we're
+                    here to help. Reach out to us and let's start a conversation! </p>
+                    <h4>Contact Us to Discuss Your Project</h4>
+                    <p> Do you have a project in mind? We’re eager to discuss it with you. Whether you’re looking for
+                        advice, have questions, or want to share your ideas, feel free to reach out. </p>
+                    <p>
+                        <span class="fw-bolder"></span><br>
+                        Kasganj<br>
+                        Uttar Pradesh, INDIA<br><br>
+                        Monday - Friday: 9:00 AM - 8:00 PM<br> Saturday - Sunday: Closed<br> <br> 
+                        Mobile: <a href="#" class="text-theme">+91 9758980790</a><br> 
+                        Email: <a href="#" class="text-theme">mohitpaldeveloper&#64;gmail.com</a>
+                    </p>
+                </div>
+                <div class="col-lg-6">
+                    <form method="GET" name="form_contact_us" class="contact-form">
+                        <div class="form-row">
+                            <div class="form-col">
+                            <label class="form-label">First Name <span class="required">*</span></label>
+                            <input type="text" class="form-input" />
+                            </div>
+                            <div class="form-col">
+                            <label class="form-label">Last Name <span class="required">*</span></label>
+                            <input type="text" class="form-input" />
+                            </div>
+                            <div class="form-col">
+                            <label class="form-label">Email <span class="required">*</span></label>
+                            <input type="email" class="form-input" />
+                            </div>
+                            <div class="form-col">
+                            <label class="form-label">Phone <span class="required">*</span></label>
+                            <input type="tel" class="form-input" />
+                            </div>
+                            <div class="form-col full-width">
+                                <label class="form-label">Message <span class="required">*</span></label>
+                                <textarea class="form-input" rows="8"></textarea>
+                            </div>
+                            <div class="form-col ">
+                            <button type="submit" class="form-button ">Send Message</button>
+                            </div>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
