--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -1,4 +1,4 @@
-<section class="about-section">
+<div class="about-section page_content" >
 
     <h3>Services</h3>
     <div class="stats">
@@ -41,4 +41,4 @@
             </div>
         </div>
     </div>
-</section>
+</div>
